fix text-wrap formatting

--- a/app/assets/stylesheets/ripples.scss
+++ b/app/assets/stylesheets/ripples.scss
@@ -31,5 +31,6 @@ blockquote {
         background-color: inherit;
         color: inherit;
         font-size: inherit;
+        white-space: pre-line;
     }
 }
